plugins {
    id 'application'
    id 'eclipse'
}

repositories {
    mavenCentral()
}

application {
    mainModule = 'network.homework'
    mainClass = 'edu.hust.it4060.homework.FakeClass'
    applicationDefaultJvmArgs = ['--enable-preview']
}

java {
    sourceCompatibility = 19
    targetCompatibility = 19
}

ext {
    awaitility = "4.2.0"
}

dependencies {
    implementation platform('org.springframework.boot:spring-boot-dependencies:3.0.5')

    implementation project(':app')
    implementation "org.slf4j:slf4j-api"
    runtimeOnly "org.apache.logging.log4j:log4j-slf4j2-impl"
    runtimeOnly "org.apache.logging.log4j:log4j-core"
    runtimeOnly "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"

    testImplementation "org.junit.jupiter:junit-jupiter"
    implementation "org.awaitility:awaitility:${awaitility}"
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.named('test') {
    useJUnitPlatform()
}

